# Simple-Retweets

./: Cargo.toml  README.md  info_sample.json
.github/workflows/: build.yml  release.yml
src/: main.rs
src/helpers/: credentials_helper.rs
src/structures/: mod.rs
systemd/: simplerts.service
