[package]
name = "ccg_rts"
version = "0.1.0"
authors = ["kingbri <bdashore3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg-mode = "0.15"
tokio  = { version = "0.2", features = ["macros", "time"] }
log = "0.4"
dashmap = "4.0.0-rc6"
pretty_env_logger = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.4.0"